 ============

 Released on 
  
 New features and improvements:

   - DDL Core v 29
   - DDL VAT v 5
   - Import a default accounts chart on dossier creation (todo #1051).
   - Export a dynamic list of exportable objects (todo #519).
   - Import a dynamic list of importable objects (todo #520).
   - VATForm: make it exportable (todo #940).
   - VATForm: make it importable (todo #939).
   - ImporterCSV: new general CSV plugin.
   - ImporterPdfBourso: new plugin which replace (obsoleted) ImportBoursoPdf one.
   - ImporterPdfLcl: new plugin which replace (obsoleted) ImportLCLPdf one.
   - ImporterTxtBourso: new plugin which replace (obsoleted) ImportBourso one.
   - ImporterTxtLcl: new plugin which replace (obsoleted) ImportLcl one.
   - Specialized importers may provide their own format (todo #1062).
   - BAT file import format is reviewed to be compatible with export format (todo #1068).

 Bug fixes:

   - Remove underlines of detached page titles.

 Other changes:

   - Fix import architecture with ofaIImporter/ofaIImportable interfaces (todo #915).
   - myIWindow: remove all references to main window.
   - myIWindow::get_key_prefix(): new method.
   - ofaApplication: implements new ofaIGetter interface.
   - ofaExtension: now passes the ofaIGetter (instead of the GApplication).
   - ofaFileDir: renamed as ofaPortfolioCollection (todo #1052).
   - ofaFileFormat: renamed as ofaStreamFormat.
   - ofa_hub_get_willing_to(): new method.
   - ofa_hub_import_csv(): removed method.
   - ofa_hub_register_types(): new method.
   - ofaIImporter: new interface.
   - ofaImporters: new loadable module.
   - ofaIRegister: new interface.
   - ofaIGetter: new interface.
   - ofaIThemeManager: new interface.
   - ofaMainWindow: implements new ofaIGetter and ofaIThemeManager interfaces.
   - ofaMainWindow: headers are moved back to ui/ (todo #937).
   - ofa_main_window_activate_theme(): removed method.
   - ofa_main_window_get_hub(): removed method.